
File: rwl.report.R
-----------------

- Added function to provide a summary of information about an rwl object. This is still very much a work in progress.

File: NAMESPACE
-----------------

- Added rwl.report to export
- Added rwl.report print method
- Added export from plyr

File: sea.R
-----------------

- Note on commit from Zang: sea() simplified and computation of p-values fixed; computation of p-values and CI bands for sea() now based on ecdf() and quantile() functions.


* CHANGES IN dplR VERSION 1.6.4

File: DESCRIPTION
-----------------

- Version number requirement for matrixStats is now (>= 0.50.0).

File: chron-dplR-Rnw
------------------
- A new vignette for chronology building. This is pretty rough and could
use some expanding.

File: anos1.Rda
------------------
- The anos1 data from Christian Zang had been read into R incorrectly at
  some point. AGB noticed negative ring widths in the file and emailed Zang
  who sent along a corrected anos1.rda file.

File: rasterPlot.R
------------------
- Added option 'Cairo' to control the preferred bitmap
  device. FALSE (the default) for png() as before, and TRUE for
  Cairo() as a new option. If the preferred device is unavailable,
  the other one will be tried.
- rasterPlot() now reverts to normal plotting if bitmap device is
  unavailable or raster images are not supported. Previously an
  error would be produced.
- The function now also works if no high level plot exists,
  i.e. if plot.new() has not been called.
- Added option 'draw' to control whether the raster plot is to be drawn (TRUE,
  the default) or returned (FALSE)
- png plot is initialized with plot.new() instead of the previous
  plot(type = "n", ...) arrangement.

File: sea.R
-----------
- Updated sea() to return bootstrapped CIs.

File: treeMean.R
-------------
- Made a new function to calculate the mean value of each tree when there are 
  multiple cores.

File: wavelet.plot.R
--------------------